<resources>
    <string name="app_name">TmbdNews</string>
    <string name="movies">Movies</string>
    <string name="rating">Rating:</string>
    <string name="movie_details">Movie Details</string>
    <string name="internet_connection">Internet Connection</string>
    <string name="check_your_internet_connection_and_try_again">Check your internet connection and try again</string>
    <string name="retry">Retry</string>
</resources>
