<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="handlers"
            type="com.tmbdnews.view.handlers.Handlers.FilmListHandlers" />

        <variable
            name="vm"
            type="com.tmbdnews.viewmodel.FrgFilmListViewModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"
                app:popupTheme="@style/AppTheme.PopupOverlay">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_marginStart="12dp"
                    android:text="@string/movies"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="@{vm.isShowEmptyView ? View.VISIBLE : View.GONE}">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/internet_connection"
                    android:textColor="@color/primary_text"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="18dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/check_your_internet_connection_and_try_again"
                    android:textColor="@color/secondary_text"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="128dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorAccent"
                    android:gravity="center"
                    android:onClick="@{handlers::onRetryClick}"
                    android:text="@string/retry"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="@{vm.isShowEmptyView ? View.GONE : View.VISIBLE}">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_films"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/progress_films"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true" />

                <ProgressBar
                    android:id="@+id/progress_films"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="12dp"
                    android:background="@android:color/transparent"
                    android:visibility="@{vm.isProgressVisible ? View.VISIBLE : View.GONE}" />
            </RelativeLayout>
        </FrameLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>