<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="handlers"
            type="com.tmbdnews.view.handlers.Handlers.FilmDetailsHandlers" />

        <variable
            name="vm"
            type="com.tmbdnews.viewmodel.FrgFilmDetailsViewModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:onClick="@{handlers::onBackClick}"
                    android:padding="18dp"
                    android:src="@drawable/ic_arrow_back_white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:text="@string/movie_details"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility='@{vm.isShowEmptyView ? View.VISIBLE : View.GONE}'>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/internet_connection"
                        android:textColor="@color/primary_text"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="18dp"
                        android:layout_marginStart="18dp"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="@string/check_your_internet_connection_and_try_again"
                        android:textColor="@color/secondary_text"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="128dp"
                        android:layout_height="32dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/colorAccent"
                        android:gravity="center"
                        android:onClick="@{handlers::onRetryClick}"
                        android:text="@string/retry"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="@{vm.isShowEmptyView ? View.GONE : View.VISIBLE}">

                    <ImageView
                        android:layout_width="154dp"
                        android:layout_height="154dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="24dp"
                        app:imageUrl="@{vm.imageUrl}" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="24dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="12dp"
                            android:text='@{vm.title, default = "Title"}'
                            android:textColor="@color/primary_text"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="12dp"
                            android:layout_marginStart="12dp"
                            android:text='@{vm.genresAndYears, default = "Years"}'
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="12dp"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="12dp"
                            android:text='@{vm.overview, default = "Overview"}'
                            android:textColor="@color/secondary_text"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>
</layout>